Fix menu center issue
asyncSelect menu will cover the entire width of the page.

--- a/src/App.css
+++ b/src/App.css
@@ -84,11 +84,11 @@
   }
 }
  
-.css-1i7hy70-control {
+/* .css-1i7hy70-control {
   min-width: 1000px;
   max-width: 1500px;
   margin: 0 auto;
-} 
+}  */
 
 .App {
   text-align: center;
